[package]
name = "hypernbd"
version = "0.1.0"
edition = "2024"
description = "Block device on S3 directly with NBD"
authors = ["Dai Yiyang"]
license = "Apache-2.0"
categories = ["asynchronous", "filesystem", "data-structures"]
keywords = ["block device", "object-storage", "s3"]
homepage = "https://github.com/hyperfile/hypernbd"
repository = "https://github.com/hyperfile/hypernbd"

[dependencies]
nbdkit = { version = "0.3.0", features = ["nix"] }
log = "0.4.27"
env_logger = "0.11.8"
nix = "0.24.3"
libc = "0.2.173"
tokio = { version = "1", features = ["full"] }
aws-config = { version = "1.5.17", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.77.0"
hyperfile = { version = "0.2.0", features = ["wal", "range-lock"] }
hyperfile-reactor = { version = "0.2.0", optional = true }

[lib]
crate-type = ["cdylib"]

[features]
tokio-style = []
handler-style = ["dep:hyperfile-reactor"]
default = ["handler-style"]
